# sframe

./: .gitignore  CONTRIBUTING.md  README.md  archive.json  draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.md  draft-ietf-sframe-enc.txt  draft-omara-sframe.md  index.html  make_test_vectors.sh  package.json  test-vectors.json  test-vectors.md
.github/: CODEOWNERS
artart-iana/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
auth48/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
auth48-v2/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
auth48-v3/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
auth48-v4/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
build-configuration/: Gemfile
deb/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
draft-ietf-sframe-enc-07/: index.html
draft-ietf-sframe-enc-08/: draft-ietf-sframe-enc.txt  index.html
draft-ietf-sframe-enc-09/: index.html
iana/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
john/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
murray/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
reference-implementation/: Cargo.toml  README.md
reference-implementation/examples/: test_vectors.rs
reference-implementation/src/: aes_ctr_hmac.rs  cipher.rs  error.rs  header.rs  lib.rs
roman/: draft-ietf-sframe-enc.html  draft-ietf-sframe-enc.txt  index.html
secdir/: draft-ietf-sframe-enc.html  index.html
suresh/: index.html  (+2 more)
(+17 files in other folders)
