[package]
name = "sframe-reference"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = { version = "0.5.2", features = ["alloc"] }
aes = "0.8.3"
aes-gcm = "0.10.2"
cipher = "0.4.4"
crypto-common = "0.1.6"
ctr = "0.9.2"
digest = "0.10.7"
generic-array = "0.14.7"
hkdf = "0.12.3"
hmac = "0.12.1"
serde = { version = "1.0.171", features = ["derive"] }
sha2 = "0.10.7"

[dev-dependencies]
clap = { version = "4.3.11", features = ["derive"] }
generic-tests = "0.1.2"
hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.11.0"
serde = "1.0.171"
serde_json = "1.0.100"
